--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-scroll-up-button": "^1.6.4",
     "youtube-player": "^5.5.2"
   },
   "scripts": {
